# scoda-engine

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  HANDOFF.md  README.md  ScodaDesktop.spec  launcher_gui.py  launcher_mcp.py  mkdocs.yml  pyproject.toml
core/: pyproject.toml
core/scoda_engine_core/: __init__.py  hub_client.py  scoda_package.py  validate_manifest.py
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fetch_packages.py  gunicorn.conf.py
design/: SCODA_CONCEPT.ko.md  SCODA_CONCEPT.md  SCODA_Concept_and_Architecture_Summary.ko.md  SCODA_Stable_UID_Schema_v0.2.ko.md  SCODA_WHITEPAPER.md
devlog/: 20260219_P01_future_roadmap.md  20260220_001_S1_step1_generic_fixture.md  20260220_002_S1_step2_generic_fixture_complete.md  20260220_003_fix_mcp_subprocess_tests.md  20260220_P02_S1_step1_plan.md  20260220_P03_S1_step2_plan.md  20260220_P04_fix_mcp_subprocess_tests.md  20260220_P05_SCODA_Distribution_and_Architecture_Strategy.md  20260221_P06_core_separation_plan.md  20260221_P07_version_management_strategy.md  20260221_S2_core_separation.md  20260222_005_S3_validate_manifest_dedup.md  20260222_006_S5_scoda_spec_alignment.md  20260222_P08_scoda_spec_alignment.md  20260222_P09_validate_manifest_dedup_plan.md  20260222_P10_trilobase_validate_manifest_cleanup.md  20260222_P11_tree_snapshot_design_review.md  20260222_fix_boolean_label_defaults.md  20260223_009_S7_github_actions_ci.md  20260223_010_manual_release_workflow.md  20260223_011_navbar_title_restructure.md  20260223_P12_github_actions_ci.md  (+78 more)
docs/: HANDOFF.md  (+15 more)
(+33 files in other folders)
