[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoda-engine-core"
version = "0.1.0"
description = "SCODA Core — pure-stdlib library for .scoda data packages"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["scoda_engine_core*"]
